process/testing/winfv-felix/infra/porter.yaml
apiVersion: v1
kind: Pod
metadata:
  name: porter
  namespace: demo
  labels:
    app: porter
spec:
  containers:
    - name: porter
      image: calico/porter:latest
      ports:
        - containerPort: 80
  nodeSelector:
    kubernetes.io/os: windows

---
apiVersion: v1
kind: Service
metadata:
  name: porter
  namespace: demo
  labels:
    app: porter
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: porter
